app/assets/stylesheets/mirador.css
:root {
  --gray-80: #ccc;
}

.mosaic-root {
  bottom: 0 !important;
  left: 0 !important;
  right: 0 !important;
  top: 0 !important;
}

.mosaic-tile {
  margin: 0 !important;
}

.mosaic-split.-row,
.mosaic-split.-column {
  background-color: #aaa;
}

.sul-embed-container {
  border: 0;
  border-left: 1px solid var(--gray-80);
  box-shadow:
    0 1px 3px 0 rgba(0, 0, 0, 0.2),
    0 1px 1px 0 rgba(0, 0, 0, 0.2),
    0 2px 1px -1px rgba(0, 0, 0, 0.2);
  height: calc(100vh - 3px); /* Give a little space for the box shadow */
  margin: 0 1px 3px 0;
  position: relative;

  /* For single-window Mirador embeds, this will be overriden by Mirador 3's
     selected window top-bar styling, but if there are mulitple
     windows, it will give the unselected windows a visible border. */
  .mirador-window-top-bar {
    border-top-color: var(--gray-80);
  }
}

.sul-embed-container {
  .mirador-window-sidebar-annotation-panel {
    .MuiMenuItem-root {
      white-space: normal;
    }
  }
}

